--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-au">
     <body style="background-color:rgb(223, 239, 253)">
-        <h1 style="text-align:center">Test Website</h1>
-        <p style="color:rgb(39, 149, 153);text-align:center">Test paragraph text.</p>
-        <a href="https://google.com">This is a link to Google</a>
+        <h1 style="text-align:center">website</h1>
+        <p style="color:rgb(39, 149, 153);text-align:center">Welcome to this website.</p>
+        <a href="https://google.com">Testing links.</a>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/SMPTE_Color_Bars.svg/1200px-SMPTE_Color_Bars.svg.png" alt="TestImage" width="256" height="256">
-        <p>This is testing a <q>quote.</q></p>
+        <p>Testing<q>quotes</q></p>
     </body>
 </html>
