--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <body style="background-color:rgb(223, 239, 253)">
         <h1 style="text-align:center">website</h1>
         <p style="color:rgb(39, 149, 153);text-align:center">Welcome to this website.</p>
-        <a href="https://google.com">Testing links.</a>
-        <p>Testing<q>quotes</q></p>
+        <p style="text-align:center"><a href="https://google.com">Testing links.</a></p>
+        <p style="text-align:center">Testing <q>quotes</q></p>
     </body>
 </html>
