--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-au">
     <body style="background-color:rgb(223, 239, 253)">
-        <h1 style="text-align:center">website</h1>
-        <p style="color:rgb(39, 149, 153);text-align:center">Welcome to this website.</p>
-        <p style="text-align:center"><a href="https://google.com">Testing links.</a></p>
-        <p style="text-align:center">Testing <q>quotes</q></p>
+        <h1 style="text-align:center">67444.github.io</h1>
+        <p style="color:rgb(39, 149, 153);text-align:center">Welcome my website.</p>
+        <br>
+        <br>
+        <br>
+        <h3 style="text-align:center;color:green">Projects</h3>
+        <p style="text-align:center">Blender 3D Modelling & Animation, OKG3D on Youtube <br> Vegetable of The Week <br> Emulation - coming soon</p>
     </body>
 </html>
