--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-au">
     <body style="background-color:rgb(223, 239, 253)">
         <h1 style="text-align:center">67444.github.io</h1>
-        <p style="color:rgb(39, 149, 153);text-align:center">Welcome my website.</p>
+        <p style="color:rgb(39, 149, 153);text-align:center">Welcome to my website.</p>
         <br>
         <br>
         <br>
