--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <br>
         <br>
         <h3 style="text-align:center;color:green">Projects</h3>
-        <p style="text-align:center">Blender 3D Modelling & Animation, OKG3D on Youtube <br> Vegetable of The Week <br> Emulation - coming soon</p>
+        <p style="text-align:center">Blender 3D Modelling & Animation, OKG3D on Youtube <br> Vegetable of The Week <br> Other stuff</p>
     </body>
 </html>
