--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <br>
         <br>
         <h3 style="text-align:center;color:green">Projects</h3>
-        <p style="text-align:center">Blender 3D Modelling & Animation, <a href https://www.youtube.com/channel/UCQKMkdOvHu0K8XoP6hTpOIw > OKG-3D on Youtube.</a></a><br> Vegetable of The Week <br> Other stuff</p>
+        <p style="text-align:center">Blender 3D Modelling & Animation, <a href="https://www.youtube.com/channel/UCQKMkdOvHu0K8XoP6hTpOIw"> OKG-3D on Youtube.</a></a><br> Vegetable of The Week <br> Other stuff</p>
     </body>
 </html>
