--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
         <br>
         <h3 style="text-align:center;color:green">Projects</h3>
         <p style="text-align:center">Blender 3D Modelling & Animation, <a href="https://www.youtube.com/channel/UCQKMkdOvHu0K8XoP6hTpOIw"> OKG-3D on Youtube.</a></a><br> Vegetable of The Week <br> Other stuff</p>
+        <div style="position: relative; width: 600px; height: 800px;">    
+
+            <div style="position: absolute; bottom: 5px">
+            OG1536/67444, 2021. Links: <a href="https://taisel.github.io/IodineGBA/">IodineEMU</a> <a href="67444.github.io/uiz">Login Zone</a>
+            </div>
+        </div>
     </body>
 </html>
