--- a/index.html
+++ b/index.html
@@ -14,5 +14,48 @@
             OG1536/67444, 2021. Links: <a href="https://taisel.github.io/IodineGBA/">IodineEMU</a> <a href="67444.github.io/uiz">Login Zone</a>
             </div>
         </div>
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+
+        <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
+
+
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+        <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-analytics.js"></script>
+
+
+        <script>
+
+        // Your web app's Firebase configuration
+
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+
+        var firebaseConfig = {
+
+            apiKey: "AIzaSyBco0YM8SXeMQugZOOnHkqHRuaRnlNrWaM",
+
+            authDomain: "mywebsite-6f533.firebaseapp.com",
+
+         projectId: "mywebsite-6f533",
+
+         storageBucket: "mywebsite-6f533.appspot.com",
+
+         messagingSenderId: "854828364890",
+
+         appId: "1:854828364890:web:f8841ede52bfa23a241463",
+
+         measurementId: "G-M6P5SZGZZV"
+
+        };
+
+        // Initialize Firebase
+
+         firebase.initializeApp(firebaseConfig);
+
+        firebase.analytics();
+
+        </script>
     </body>
 </html>
