--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div style="position: relative; width: 600px; height: 800px;">    
 
             <div style="position: absolute; bottom: 5px">
-            OG1536/67444, 2021. Links: <a href="https://taisel.github.io/IodineGBA/">IodineEMU</a> <a href="/uiz">Login Zone</a>
+            OG1536/67444, 2021. Links: <a href="https://taisel.github.io/IodineGBA/">IodineEMU</a> <a href="/UIZ">Login Zone</a>
             </div>
         </div>
     </body>
