--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <br>
         <br>
         <h3 style="text-align:center;color:green">Projects</h3>
-        <p style="text-align:center">Blender 3D Modelling & Animation, <a href="https://www.youtube.com/channel/UCQKMkdOvHu0K8XoP6hTpOIw"> OKG-3D on Youtube.</a></a><br> Vegetable of The Week <br> Other stuff</p>
+        <p style="text-align:center">Blender 3D Modelling & Animation, <a href="https://www.youtube.com/channel/UCQKMkdOvHu0K8XoP6hTpOIw"> OKG-3D on Youtube.</a></a><br> Vegetable of The Week <br> <a href="http://67444.github.io/GradeCalc">Grade Calculator</a> <br> Other stuff</p>
         <div style="position: relative; width: 600px; height: 800px;">    
 
             <div style="position: absolute; bottom: 5px">
