--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <body style="background-color:rgb(223, 239, 253)">
         <h1 style="text-align:center">67444.github.io</h1>
         <p style="color:rgb(39, 149, 153);text-align:center">Welcome to my website.</p>
+        <p>Check out my portfolio <a href="https://67444.github.io/portfolio"> here.</a></p>
         <br>
         <br>
         <br>
