--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-au">
     <body style="background-color:rgb(223, 239, 253)">
-        <h1 style="text-align:center">67444.github.io</h1>
-        <p style="color:rgb(39, 149, 153);text-align:center">Welcome to my website.</p>
+        <h1 style="text-align:center;font-family: sans-serif">67444.github.io</h1>
+        <p style="color:rgb(39, 149, 153);text-align:center;font-family: sans-serif">Welcome to my website.</p>
         <p style="color:black;text-align:center;font-family: sans-serif;">Check out my portfolio <a href="https://67444.github.io/portfolio"> here.</a></p>
         <br>
         <br>
         <br>
-        <h3 style="text-align:center;color:green">Projects</h3>
-        <p style="text-align:center">Blender 3D Modelling & Animation, <a href="https://www.youtube.com/channel/UCQKMkdOvHu0K8XoP6hTpOIw"> OKG-3D on Youtube.</a></a><br> Vegetable of The Week <br> Other stuff</p>
-        <div style="position: relative; width: 600px; height: 800px;">    
+        <h3 style="text-align:center;color:green;font-family: sans-serif">Projects</h3>
+        <p style="text-align:center;font-family: sans-serif">Blender 3D Modelling & Animation, <a href="https://www.youtube.com/channel/UCQKMkdOvHu0K8XoP6hTpOIw"> OKG-3D on Youtube.</a></a><br> Vegetable of The Week <br> Other stuff</p>
+        <div style="position: relative; width: 600px; height: 800px;font-family: sans-serif">    
 
             <div style="position: absolute; bottom: 5px">
             OG1536/67444, 2021. Links: <a href="https://taisel.github.io/IodineGBA/">IodineEMU</a> <a href="/UIZ">Login Zone</a>
