--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en-au">
-    <body style="background-color:rgb(223, 239, 253)">
-        <h1 style="text-align:center">67444.github.io</h1>
-        <p style="color:rgb(39, 149, 153);text-align:center">Welcome to my website.</p>
-        <br>
-        <br>
-        <br>
-        <h3 style="text-align:center;color:green">Projects</h3>
-        <p style="text-align:center">Blender 3D Modelling & Animation, <a href="https://www.youtube.com/channel/UCQKMkdOvHu0K8XoP6hTpOIw"> OKG-3D on Youtube.</a></a><br> Vegetable of The Week <br> <a href="http://67444.github.io/GradeCalc">Grade Calculator</a> <br> Other stuff</p>
-        <div style="position: relative; width: 600px; height: 800px;">    
-
-            <div style="position: absolute; bottom: 5px">
-            OG1536/67444, 2021. Links: <a href="https://taisel.github.io/IodineGBA/">IodineEMU</a> <a href="/UIZ">Login Zone</a>
-            </div>
+    <head>
+        <meta charset="UTF-8"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body class="body-main" style="background-color:rgb(143, 218, 236); font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">
+        <div>
+            <h1 style="text-align:center; font-size:xx-large">gh.ochinthya.tech</h1>
+            <p style="color:rgb(47, 84, 85);text-align:center;text-decoration:underline;">Welcome to my website.</p>
+            <br> 
+            <br>
+            <br>
+            <h3 style="text-align:center;color:green"> My Projects</h3>
+            <p style="text-align:center">Blender 3D Modelling & Animation, <a href="https://www.youtube.com/channel/UCQKMkdOvHu0K8XoP6hTpOIw"> OKG-3D on Youtube.</a></a>
+                <br> Vegetable of The Week <br> 
+                <a href="http://67444.github.io/SpeedCalcJS">Speed Calculator (WIP Open Alpha, Core functionality <b>NOT</b> working!)</a> 
+                <br> <a href="http://67444.github.io/CountdownJS">Countdown (WIP, not functioning)</a>
+            <div style="position: relative; width: 600px; height: 800px;">    
         </div>
+        <div style="position: absolute; bottom: 0px">OG1536/67444, 2021. Links:<a href="/UIZ">Login Zone</a></div>
     </body>
 </html>
