--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     </head>
     <body class="body-main" style="background-color:rgb(143, 218, 236); font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">
         <div>
-            <h1 style="text-align:center; font-size:xx-large">gh.ochinthya.tech</h1>
-            <p style="color:rgb(47, 84, 85);text-align:center;text-decoration:underline;">Welcome to my website.</p>
+            <h1 style="text-align:center; font-size:xx-large">OG1536</h1>
+            <p style="color:rgb(47, 84, 85);text-align:center;text-decoration:underline;">Hi. 👋.</p>
             <br> 
             <br>
             <br>
-            <h3 style="text-align:center;color:green"> My Projects</h3>
-            <p style="text-align:center">Blender 3D Modelling & Animation, <a href="https://www.youtube.com/channel/UCQKMkdOvHu0K8XoP6hTpOIw"> OKG-3D on Youtube.</a></a>
-                <br> Vegetable of The Week <br> 
-                <a href="http://67444.github.io/SpeedCalcJS">Speed Calculator (WIP Open Alpha, Core functionality <b>NOT</b> working!)</a> 
-                <br> <a href="http://67444.github.io/CountdownJS">Countdown (WIP, not functioning)</a>
+            <h3 style="text-align:center;color:green"> Stuff</h3>
+            <p style="text-align:center">My Old YT Channel <a href="https://www.youtube.com/channel/UCQKMkdOvHu0K8XoP6hTpOIw"> link </a> </p> <br>
+            <h4 style="text-align:center;color:blueviolet"> Stuff that doesn't work</h4>
+            <a href="http://67444.github.io/SpeedCalcJS">Speed Calculator</a> 
+            <br> <a href="http://67444.github.io/CountdownJS">Countdown App</a>
             <div style="position: relative; width: 600px; height: 800px;">    
         </div>
-        <div style="position: absolute; bottom: 0px">OG1536/67444, 2021. Links:<a href="/UIZ">Login Zone</a></div>
+        <div style="position: absolute; bottom: 0px">OG1536/67444, 2023.</div>
     </body>
 </html>
