--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <br>
             <br>
             <h3 style="text-align:center;color:green"> Stuff</h3>
-            <p style="text-align:center">My Old YT Channel <a href="https://www.youtube.com/channel/UCQKMkdOvHu0K8XoP6hTpOIw"> link </a> </p> <br>
+            <p style="text-align:center">My Old YT Channel <a href="https://www.youtube.com/channel/UCQKMkdOvHu0K8XoP6hTpOIw"> link </a><br>
             <h4 style="text-align:center;color:blueviolet"> Stuff that doesn't work</h4>
             <a href="http://67444.github.io/SpeedCalcJS">Speed Calculator</a> 
-            <br> <a href="http://67444.github.io/CountdownJS">Countdown App</a>
+            <br> <a href="http://67444.github.io/CountdownJS">Countdown App</a></p>
             <div style="position: relative; width: 600px; height: 800px;">    
         </div>
         <div style="position: absolute; bottom: 0px">OG1536/67444, 2023.</div>
