--- a/index.html
+++ b/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
-<html lang="en-au">
+<html>
     <head>
-        <meta charset="UTF-8"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Agdasima&family=Playfair&family=Gabriela">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body class="body-main" style="background-color:rgb(143, 218, 236); font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">
-        <div>
-            <h1 style="text-align:center; font-size:xx-large">OG1536</h1>
-            <p style="color:rgb(47, 84, 85);text-align:center;text-decoration:underline;">Hi. 👋.</p>
-            <br> 
-            <br>
-            <br>
-            <h3 style="text-align:center;color:green"> Stuff</h3>
-            <p style="text-align:center">My Old YT Channel <a href="https://www.youtube.com/channel/UCQKMkdOvHu0K8XoP6hTpOIw"> link </a><br>
-            <h4 style="text-align:center;color:blueviolet"> Stuff that doesn't work</h4>
-            <a href="http://67444.github.io/SpeedCalcJS" style="text-align: center;">Speed Calculator</a> 
-            <br> <a href="http://67444.github.io/CountdownJS" style="text-align: center;">Countdown App</a></p>
-            <div style="position: relative; width: 600px; height: 800px;">    
-        </div>
-        <div style="position: absolute; bottom: 0px">OG1536/67444, 2023.</div>
+    <body>
+        <header>
+            <h1>Ochinthya Gamage</h1>
+        </header>
+        <a class="items" href="/arch.html">Architecture</a>
+        <br><a class="items" href="/posters.html">Communication Design</a>
+        <br><a class="items" href="/modelling.html">3D Modelling</a>
+        <br><a class="items" href="/renders.html">Renders</a>
+        <br><a class="items" href="http://www.google.com">Web Design</a>
     </body>
+    <footer>2023 Ochinthya Gamage - <a href="mailto:ochinthya.gamage@gmail.com">Contact</a></footer>
 </html>
