--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         </header>
         <a class="items" href="/arch.html">Architecture</a>
         <br><a class="items" href="/posters.html">Communication Design</a>
-        <br><a class="items" href="/modelling.html">3D Modelling</a>
-        <br><a class="items" href="/renders.html">Renders</a>
+        <br><a class="items" href="/portfolio">Renders</a>
         <br><a class="items" href="http://www.google.com">Web Design</a>
     </body>
     <footer>2023 Ochinthya Gamage - <a href="mailto:ochinthya.gamage@gmail.com">Contact</a></footer>
